# Samanta

./: .gitignore  INSTRUCTIVO.md  README.md
deploy/: .env.example  README.md  docker-compose.yml
deploy/app/: Dockerfile  README.md  pyproject.toml
deploy/app/samanta_rag/: __init__.py  bootstrap.py  config.py  constants.py  diagnostics.py  ingest.py  logging_utils.py  main.py
deploy/app/samanta_rag/application/: __init__.py  answer_cache.py  query_handler.py
deploy/app/samanta_rag/domain/: __init__.py  entities.py  services.py
deploy/app/samanta_rag/infrastructure/: __init__.py
deploy/app/samanta_rag/infrastructure/llm/: __init__.py  ollama_adapter.py
deploy/app/samanta_rag/infrastructure/vectorstore/: __init__.py  embeddings.py  faiss_adapter.py
deploy/app/samanta_rag/interface/: __init__.py
deploy/app/samanta_rag/interface/api/: app.py  dependencies.py  middleware.py  routes.py
deploy/app/samanta_rag/interface/ui/: chat_app.py
deploy/app/samanta_rag/mcp/: __init__.py  client.py  observability.py  registry.py  router.py  tool_registry.py
deploy/app/samanta_rag/scripts/: check_mcp_teatro_bar.py
deploy/app/tests/: test_answer_cache.py  test_api.py  test_config.py
deploy/data/markdown/: 000_index.md  001_la_ferreteria.md  010_club_social.md  030_eventos_semana_actual.md  031_eventos_mensuales.md  040_menu_index.md  041_menu_minutas.md  042_menu_empanadas.md  043_menu_pizzas.md  044_menu_bebidas_sin_alcohol.md  (+8 more)
deploy/scripts/: check_mcp_teatro_bar.py  diagnostics.sh  ingest.sh  provision.sh  pull_models.sh
docs/: plan-multitenant-samanta.md
(+15 files in other folders)
