[project]
name = "samanta-rag"
version = "0.1.0"
description = "Agente conversacional RAG para negocio local"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "python-dotenv>=1.0.1",
  "langchain-core>=0.3.0,<0.4.0",
  "langchain-community>=0.3.0,<0.4.0",
  "langchain-text-splitters>=0.3.0,<0.4.0",
  "langchain-ollama>=0.3.8,<0.4.0",
  "langchain-openai>=0.3.0,<0.4.0",
  "faiss-cpu>=1.8.0",
  "gradio>=4.26.0",
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0",
  "watchdog>=4.0.0",
  "httpx>=0.27.0",
  "aiohttp>=3.13.0",
  "mcp>=1.2.0",
  "websockets>=10.4,<13.0"
]

[project.scripts]
samanta-rag-ingest = "samanta_rag.ingest:cli_entrypoint"
samanta-rag-diagnostics = "samanta_rag.diagnostics:main"

[tool.uv]
index-url = "https://pypi.org/simple"
